fixed stretched images

--- a/src/card/card.css
+++ b/src/card/card.css
@@ -22,7 +22,7 @@
   position: relative;
   top: 0;
   width: 100%;
-  height: 85%;
+  height: 80%;
 }
 
 .card .image-box img {
@@ -31,7 +31,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  display: block;
+  display: cover;
 }
 
 .card .content {
